// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic run tests collection invalid 1`] = `"Invalid ExampleType: ExampleType must have required property 'value'"`;

exports[`Basic run tests collection invalid 2`] = `"Invalid ExampleType: ExampleType must have required property 'value', ExampleType/email must match format \\"email\\""`;

exports[`Basic run tests collection valid 1`] = `
Object {
  "answer": 42,
  "value": "Hello World",
}
`;

exports[`Basic run tests collection valid 2`] = `
Object {
  "answer": 42,
  "email": "forbes@lindesay.co.uk",
  "value": "Hello World",
}
`;

exports[`Basic run tests collection with separate schema file invalid 1`] = `"Invalid ExampleType: ExampleType must have required property 'value'"`;

exports[`Basic run tests collection with separate schema file invalid 2`] = `"Invalid ExampleType: ExampleType must have required property 'value', ExampleType/email must match format \\"email\\""`;

exports[`Basic run tests collection with separate schema file valid 1`] = `
Object {
  "answer": 42,
  "value": "Hello World",
}
`;

exports[`Basic run tests collection with separate schema file valid 2`] = `
Object {
  "answer": 42,
  "email": "forbes@lindesay.co.uk",
  "value": "Hello World",
}
`;

exports[`Basic run tests invalid 1`] = `
"ExampleType must have required property 'value'

{ answer: 42 }"
`;

exports[`Basic run tests invalid 2`] = `
"ExampleType must have required property 'value', ExampleType/email must match format \\"email\\"

{ email: 'forbeslindesay.co.uk', answer: 42 }"
`;

exports[`Basic run tests valid 1`] = `
Object {
  "answer": 42,
  "value": "Hello World",
}
`;

exports[`Basic run tests valid 2`] = `
Object {
  "answer": 42,
  "email": "forbes@lindesay.co.uk",
  "value": "Hello World",
}
`;

exports[`Basic run tests with cleaner invalid 1`] = `
"ExampleType must have required property 'value'

{ answer: 42 }"
`;

exports[`Basic run tests with cleaner invalid 2`] = `
"ExampleType must have required property 'value', ExampleType/email must match format \\"email\\"

{ email: 'forbeslindesay.co.uk', answer: 42 }"
`;

exports[`Basic run tests with cleaner valid 1`] = `
Object {
  "answer": 42,
  "value": "Hello World",
}
`;

exports[`Basic run tests with cleaner valid 2`] = `
Object {
  "answer": 42,
  "email": "forbes@lindesay.co.uk",
  "value": "Hello World",
}
`;

exports[`Basic run tests with separate schema file invalid 1`] = `
"ExampleType must have required property 'value'

{ answer: 42 }"
`;

exports[`Basic run tests with separate schema file invalid 2`] = `
"ExampleType must have required property 'value', ExampleType/email must match format \\"email\\"

{ email: 'forbeslindesay.co.uk', answer: 42 }"
`;

exports[`Basic run tests with separate schema file valid 1`] = `
Object {
  "answer": 42,
  "value": "Hello World",
}
`;

exports[`Basic run tests with separate schema file valid 2`] = `
Object {
  "answer": 42,
  "email": "forbes@lindesay.co.uk",
  "value": "Hello World",
}
`;

exports[`Permissive run tests collection Clean Extra 1`] = `
Object {
  "answer": 1,
  "value": "ddd",
}
`;

exports[`Permissive run tests collection Clean Extra 2`] = `"Invalid ExampleType: ExampleType must NOT have additional properties"`;

exports[`Permissive run tests collection invalid 1`] = `"Invalid ExampleType: ExampleType must have required property 'value'"`;

exports[`Permissive run tests collection invalid 2`] = `"Invalid ExampleType: ExampleType must have required property 'value'"`;

exports[`Permissive run tests collection invalid 3`] = `"Invalid ExampleType: ExampleType must have required property 'value', ExampleType/email must match format \\"email\\""`;

exports[`Permissive run tests collection invalid 4`] = `"Invalid ExampleType: ExampleType must have required property 'value', ExampleType/email must match format \\"email\\""`;

exports[`Permissive run tests collection valid 1`] = `
Object {
  "answer": 42,
  "value": "Hello World",
}
`;

exports[`Permissive run tests collection valid 2`] = `
Object {
  "answer": 42,
  "value": "Hello World",
}
`;

exports[`Permissive run tests collection valid 3`] = `
Object {
  "answer": 42,
  "email": "forbes@lindesay.co.uk",
  "value": "Hello World",
}
`;

exports[`Permissive run tests collection valid 4`] = `
Object {
  "answer": 42,
  "email": "forbes@lindesay.co.uk",
  "value": "Hello World",
}
`;
